--- a/gymEatLanding/package.json
+++ b/gymEatLanding/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
     "@fortawesome/fontawesome-free": "^6.1.1",
+    "animejs": "^3.2.1",
     "flask": "^0.2.10",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
